<?xml version="1.0"?>
<package format="2">
  <name>ros_rnet_controller</name>
  <version>0.0.1</version>
  <description>ROS controller for rnet wheelchair system</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

</package>
